fix: horizontal scroll

--- a/src/koduq/sections/home/horizontalSections/CareAbout.module.scss
+++ b/src/koduq/sections/home/horizontalSections/CareAbout.module.scss
@@ -38,7 +38,7 @@
       display: none;
       @include desktop() {
         height: 70%;
-        // display: block;
+        display: block;
       }
     }
   
